--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="images/favicon-32x32.png" type="image/png">
   <title>CARD</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="altStyle.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;700&family=Open+Sans:wght@400;500;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
@@ -12,23 +14,31 @@
 <body>
   <div class="card">
     <div class="container">
-      <div class="card-container">
-        <div class="content">
-          <img src="images/image-equilibrium.jpg" alt="">
-          <div class="info">
-          <h2>equilibrium #3429</h2>
-          <p>our equilibrium collection promotes balance and calm.</p>
-          <div class="time">
-            <span>0.041eth</span>
-            <span>3 days left</span>
+        <div class="header-img">
+          <img src="images/image-equilibrium.jpg" alt="equilibrium">
+          <div class="overlay">
+            <img src="images/icon-view.svg" alt="icon-view">
           </div>
+        </div>
+        <div class="info">
+          <a href="#">Equilibrium #3429</a>
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+          <div class="flex">
+            <div class="eth">
+              <img src="images/icon-ethereum.svg" alt="">
+              <p>0.041eth</p>
+            </div>
+            <div class="days">
+              <img src="images/icon-clock.svg" alt="icon-clock">
+              <p>3 days left</p>
+            </div>
+          </div>
+          <hr>
           <div class="footer">
-            <img src="images/image-avatar.png" alt="">
-            <p>creation of <span>jules wyvern</span></p>
+            <img src="images/image-avatar.png" alt="image-avatar">
+            <p>Creation of <a href="#">Jules Wyvern</a></p>
           </div>
         </div>
-        </div>
-      </div>
     </div>
   </div>
 </body>
