--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,13 +7,12 @@
   <link rel="icon" href="images/favicon-32x32.png" type="image/png">
   <title>CARD</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="altStyle.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;700&family=Open+Sans:wght@400;500;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
 </head>
 <body>
-  <div class="card">
+  <div class="card" role="main">
     <div class="container">
         <div class="header-img">
           <img src="images/image-equilibrium.jpg" alt="equilibrium">
@@ -34,12 +34,19 @@
             </div>
           </div>
           <hr>
-          <div class="footer">
+          <div class="author">
             <img src="images/image-avatar.png" alt="image-avatar">
             <p>Creation of <a href="#">Jules Wyvern</a></p>
           </div>
         </div>
     </div>
+
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor </a>. 
+        Coded by <a href="#">Ali Mahmoud</a>
+      </p>
+    </footer>
   </div>
 </body>
 </html>
